# smartbasket

./: .gitignore  .vercelignore  README.md  package-lock.json  vercel.json
.github/workflows/: deploy.yml
backend/: README.md  WORKER_SETUP.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  worker.py
backend/api/: index.py
backend/lib/: db.py  llm_matcher.py  matcher.py  ocr_engine.py
backend/seed/: sql.init
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: SmartBasketPlusModal.tsx
