[project]
name = "smartbasket-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.27",
    "easyocr>=1.7.2",
    "fastapi>=0.136.3",
    "groq>=1.4.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "torch<2.6",
    "uvicorn>=0.49.0",
]
